<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="
           http://maven.apache.org/POM/4.0.0
           http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ksaifstack</groupId>
    <artifactId>docktask</artifactId>
    <version>0.6.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>DockTask</name>
    <description>Desktop task manager with millisecond-accurate deadlines built with JavaFX</description>
    <url>https://github.com/KSaifStack/DockTask</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
        <javafx.version>25</javafx.version>
        <mainClass>com.ksaifstack.docktask/com.ksaifstack.docktask.Main</mainClass>
    </properties>

    <profiles>
        <profile>
            <id>windows</id>
            <activation>
                <os><family>windows</family></os>
            </activation>
            <properties>
                <package.type>EXE</package.type>
                <package.icon>${project.basedir}/assets/windows/DockTask.ico</package.icon>
            </properties>
        </profile>
        <profile>
            <id>mac</id>
            <activation>
                <os><family>mac</family></os>
            </activation>
            <properties>
                <package.type>DMG</package.type>
                <package.icon>${project.basedir}/assets/mac/DockTask.icns</package.icon>
            </properties>
        </profile>
        <profile>
            <id>linux</id>
            <activation>
                <os>
                    <name>Linux</name>
                </os>
            </activation>
            <properties>
                <package.type>DEB</package.type>
                <package.icon>${project.basedir}/assets/linux/DockTask.png</package.icon>
            </properties>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>project-local-repo</id>
            <url>file://${project.basedir}/lib</url>
        </repository>
    </repositories>

    <dependencies>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>com.dorkbox</groupId>
            <artifactId>SystemTray</artifactId>
            <version>3.8</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>xss.it</groupId>
            <artifactId>nfx-core</artifactId>
            <version>1.0.4</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.21.0</version>
        </dependency>

        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>5.18.1</version>
        </dependency>

        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna-platform</artifactId>
            <version>5.18.1</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.dustinredmond.fxtrayicon</groupId>
            <artifactId>FXTrayIcon</artifactId>
            <version>4.0.1</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>${mainClass}</mainClass>
                    <options>
                        <option>--enable-native-access=javafx.graphics</option>
                        <option>--enable-native-access=nfx.core</option>
                        <option>--add-reads</option>
                        <option>com.ksaifstack.docktask=ALL-UNNAMED</option>
                    </options>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <goals>
                            <goal>jpackage</goal>
                        </goals>
                        <configuration>
                            <name>DockTask</name>
                            <appVersion>0.6.0</appVersion>
                            <vendor>KSaifStack</vendor>
                            <destination>${project.build.directory}/installer</destination>
                            <mainJar>docktask-0.6.0-SNAPSHOT.jar</mainJar>
                            <mainClass>com.ksaifstack.docktask.Main</mainClass>
                            <input>${project.build.directory}</input>
                            <icon>${package.icon}</icon>
                            <winMenu>true</winMenu>
                            <winShortcut>true</winShortcut>
                            <winPerUserInstall>true</winPerUserInstall>
                            <winDirChooser>true</winDirChooser>
                            <type>${package.type}</type>
                            <javaOptions>
                                <javaOption>-Dfile.encoding=UTF-8</javaOption>
                                <javaOption>--enable-native-access=javafx.graphics</javaOption>
                                <javaOption>--enable-native-access=nfx.core</javaOption>
                            </javaOptions>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>23</source>
                    <target>23</target>
                    <compilerArgs>
                        <arg>--add-reads</arg>
                        <arg>com.ksaifstack.docktask=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>${mainClass}</mainClass>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.6.1</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*</include>
                </includes>
            </resource>
        </resources>
    </build>

</project>